@@ -21,6 +21,10 @@ This tool must be run as the same user as the dccmd daemon.
 
 .SH "OPTIONS"
 .TP
+\-r
+Copy directories recursively.
+
+.TP
 \-d \fILEVEL\fR
 Set debug log level:
 .IP
